[tool.poetry]
name = "image_tools"
version = "0.1.2"
description = ""
authors = [
    "svtter <xiuhao@thinghoo.com>",
]
include = [
    "src/*",
]

[tool.poetry.dependencies]
python = "^3.9"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pre-commit = "^2.20.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"

[tool.poetry.source]
name = "thinghoo"
url = "http://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"
default = true

[tool.poetry.scripts]
img = "image_tools.app:main"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
